# hpc-learning

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.claude/: settings.json
.claude/agents/: benchmark-analyst.md  build-system.md  edge-deployer.md  gpu-reference.md  kernel-optimizer.md  model-integrator.md  quantization-engineer.md
.github/workflows/: bench.yml  ci.yml  regression.yml
benchmarks/: CMakeLists.txt
benchmarks/baselines/: CMakeLists.txt  bench_eigen.cpp  bench_openblas.cpp
benchmarks/hardware_probe/: CMakeLists.txt  bench_peak.cpp
benchmarks/microbench/: CMakeLists.txt  bench_gemm_naive.cpp  bench_tensor.cpp
cli/: CMakeLists.txt  main.cpp
cmake/modules/: FindOpenBLAS.cmake
cmake/toolchains/: android-arm64.cmake
docs/: KERNEL_DESIGN.md
include/engine/: allocator.hpp  tensor.hpp  types.hpp
include/engine/kernels/: gemm.hpp
scripts/: run_bench.sh
src/: CMakeLists.txt
src/kernels/gemm/: CMakeLists.txt  gemm_internal.hpp  gemm_naive.cpp  gemm_parallel.cpp  gemm_simd.cpp  gemm_tiled.cpp
src/tensor/: CMakeLists.txt  tensor.cpp
tests/unit/: CMakeLists.txt  test_gemm.cpp  test_tensor.cpp
tools/: bench_viz.py  regression_check.py  roofline.py
